log/build_2024-06-20_02-25-28/autonomous_exploration/stderr.log
  File "/home/kev/ldlidar_ros2_ws/install/autonomous_exploration/lib/python3.10/site-packages/autonomous_exploration/control.py", line 125
    return grid_x, grid_yimport rclpy
                                ^^^^^
SyntaxError: invalid syntax

